--- a/templates/faq.html
+++ b/templates/faq.html
@@ -33,7 +33,7 @@
             <summary>
                 Combien coûte l'adhésion ?
             </summary>
-            30 balles par an jdirais
+            30 balles par an jdirais... non, (7$ * 12)/2 = 40 balles
         </details>
     </section>
 </div>
