--- a/templates/base.html
+++ b/templates/base.html
@@ -5,16 +5,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/site.css">
-        <title>ffep</title>
+        <title>FFEP</title>
         <script src="/static/js/gold.js"></script>
     </head>
     <body>
         <header>
-            <div class="chain gap-m">
+            <div class="logo chain gap-m">
                 <a href="/">
                     <img src="/static/svg/fish.svg">
                 </a>
-                <p>ffep</p>
+                FFEP
             </div>
             <div class="chain gap-m">
                 <a href="/join">Rejoindre</a>
@@ -55,7 +55,7 @@
                     <li><a href="/faq">FAQ</a></li>
                 </ul>
             </div>
-            <div class="stack gap-s">
+            <div class="logo stack gap-s">
                 <h4>FFEP</h4>
                 <a href="/">
                     <img src="/static/svg/fish.svg">
