--- a/templates/home.html
+++ b/templates/home.html
@@ -3,21 +3,26 @@
 {% block content %}
 <h1>fédération</h1>
 <section class="stack gap-m card">
-    <h2>qu'est-ce</h2>
-    <p>test website</p>
+    <h2>Bienvenue...</h2>
+    <p>...sur le site de la
+    <span>Fédération Française d'Echecs Poissons</span>.
+    </p>
+    <p>Fondée en 2024, cette association a pour but de promouvoir la connerie.</p>
+    <p>Nous sommes une association loi 1901 si dieu veut.</p>
 </section>
 <section class="stack gap-m card">
-    <h2>rejoindre</h2>
-    <p>test website</p>
-    <a href="/join" class="button">rejoindre</a>
+    <h2>Nous rejoindre</h2>
+    <p>Vous voulez apprendre ? Partager vos stratégies ?</p>
+    <p>Alors rejoignez-nous !</p>
+    <a href="/join" class="button">Rejoindre</a>
 </section>
 <section class="stack gap-m card">
-    <h2>déjà membre ?</h2>
-    <p>connectez-vous</p>
+    <h2>Déjà membre ?</h2>
+    <p>Connectez-vous ici :</p>
     <form action="login" method="post" class="stack gap-s">
         <input type="text" name="username" placeholder="fischer" required autocomplete="username">
         <input type="password" name="pwd" placeholder="password" required autocomplete="current-password">
-        <input type="submit" value="Se connecter">
+        <input class="button" type="submit" value="Se connecter">
     </form>
 </section>
 {% endblock %}
