--- a/templates/home.html
+++ b/templates/home.html
@@ -5,15 +5,23 @@
 <section class="stack gap-m card">
     <h2>Bienvenue...</h2>
     <p>...sur le site de la
-    <span>Fédération Française d'Echecs Poissons</span>.
+    <span>Fédération Française d'Échecs Poissons</span>.
     </p>
-    <p>Fondée en 2024, cette association a pour but de promouvoir la connerie.</p>
-    <p>Nous sommes une association loi 1901 si dieu veut.</p>
+    <p>Nous serons une association loi 1901 si dieu veut.</p>
 </section>
 <section class="stack gap-m card">
     <h2>Nous rejoindre</h2>
-    <p>Vous voulez apprendre ? Partager vos stratégies ?</p>
-    <p>Alors rejoignez-nous !</p>
+    <p>En rejoignant la FFEP, vous pourrez :</p>
+    <ul>
+        <li>Voir et commenter les parties d'échecs poissons</li>
+        <li>Ajouter vos propre parties</li>
+        <li>Accéder au chat exclusif</li>
+        <li>Voir vos statistiques</li>
+        <li>Accéder au support</li>
+        <li>...</li>
+        <li>et beaucoup plus !</li>
+    </ul>
+    <p>Vous contribuerez à notre développement pour répandre la bonne parole.</p>
     <a href="/join" class="button">Rejoindre</a>
 </section>
 <section class="stack gap-m card">
