--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/site.css">
+        <link rel="icon" href="/static/svg/fish.svg">
         <title>FFEP</title>
         <script src="/static/js/gold.js"></script>
     </head>
